# sidplayfp

./: .gitignore  AUTHORS  AUTHORS.md  CMakeLists.txt  INSTALL  Makefile.am  NEWS  NEWS.md  README  README.md  TODO  configure.ac  menu.cpp  player.cpp  sidplayfp.spec.in
.github/: dependabot.yml
.github/workflows/: build.yml  codeql.yml  release.yml  w64-binary.yml  windows-binary.yml
build-aux/: config.rpath
debian/: changelog  control  copyright  rules  watch
doc/en/: Makefile.am  sidplay2.1  sidplayfp.1  sidplayfp.ini.5  sidplayfp.ini.pod  sidplayfp.pod  stilview.1  stilview.pod  stilview.xml
include/: config.h
libs/miniaudio/: miniaudio.h  osaudio_miniaudio.c
m4/: my_macros.m4
src/: IniConfig.cpp  IniConfig.h  Makefile.am  args.cpp  codeConvert.cpp  codeConvert.h  codepages.h  config.h.template  dataParser.h  keyboard.cpp  keyboard.h  main.cpp  menu.cpp  mixer.cpp  mixer.h  player.cpp  player.h  setting.h  sidcxx11.h  siddefines.h  sidlib_features.h  stilview.cpp  utils.cpp  utils.h
src/audio/: AudioBase.h  AudioConfig.h  AudioDrv.cpp  AudioDrv.h  IAudio.h  Makefile.am
src/audio/alsa/: Makefile.am  audiodrv.cpp  audiodrv.h
src/audio/au/: auFile.cpp  auFile.h
src/audio/directx/: Makefile.am  audiodrv.cpp  audiodrv.h  directx.cpp  directx.h
src/audio/hpux/: Makefile.am  audiodrv.cpp  audiodrv.h
src/audio/irix/: Makefile.am  audiodrv.cpp  audiodrv.h
src/audio/miniaudio/: audiodrv.cpp  audiodrv.h
src/audio/mmsystem/: Makefile.am  audiodrv.cpp  audiodrv.h  mmsystem.cpp  mmsystem.h
src/audio/null/: Makefile.am  null.cpp  null.h
src/audio/oss/: Makefile.am  audiodrv.cpp  audiodrv.h
src/audio/out123/: audiodrv.cpp  audiodrv.h
src/audio/pulse/: Makefile.am  audiodrv.cpp  audiodrv.h
src/audio/raw/: Makefile.am  RawFile.cpp  RawFile.h
src/audio/sunos/: Makefile.am  audiodrv.cpp  audiodrv.h
src/audio/wav/: Makefile.am  WavFile.cpp  WavFile.h  WavFileDefs.h
src/ini/: dataParser.h  headings.i  ini.cpp  iniHandler.cpp  iniHandler.h  keys.i  libini_tcl.c  list.h  list.i  sidfstream.h  types.h  types.i
win/VC/: config.h  sidplay.dsp  sidplay.dsw  sidplay.sln  sidplay.vcproj
win/VC5/: sidplay.dsp  sidplay.dsw
